fix for camera blur image alignment

--- a/vtr-ui/src/app/components/camera-background-blur/camera-background-blur.component.scss
+++ b/vtr-ui/src/app/components/camera-background-blur/camera-background-blur.component.scss
@@ -5,9 +5,10 @@
 			border: 0.1rem solid #ecf0f1;
 			height: 25.8rem;
 			object-fit: contain;
-			width: 100%;
+			width: calc(100% - 1.3rem);
 			border-radius: 0.4rem;
 			margin-top: 1rem;
+			margin-left: 1.3rem;
 			img{
 				width: 100%;
 				height: 100%;
